# intern_assignment

./: README.md  db.sqlite3  pyproject.toml
project/: celery.py  settings.py  urls.py
tasks/: models.py  serializers.py  tests.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  tasks.py  tests.py  views.py
users/migrations/: 0001_initial.py
